<resources>
    <string name="pass_a_string" translatable="false">%1$s</string>
    <string name="select_app">Select App</string>
    <string name="show_apps">Search Apps</string>
    <string name="show_private_apps">Search Private Apps</string>
    <string name="show_work_apps">Search Work Apps</string>
    <string name="show_contacts">Search Contacts</string>
    <string name="welcome_to_launcher">Welcome to %1$s</string>
    <string name="continue_by_you_agree">By continuing you agree to %1$s</string>
    <string name="usage_access_permission">Usage Access Permissions</string>
    <string name="location_access_permission">Location Access Permissions</string>
    <string name="accessibility_access_permission">Accessibility Permissions</string>
    <string name="grant_permission">Grant Permission</string>
    <string name="grant_usage_permission">To continue, please grant Usage Access permission.</string>
    <string name="reason_usage_permission">This app needs Usage Access to show your most used apps, track screen time, and improve your experience.We do not collect or share any personal data.</string>
    <string name="grant_location_permission">To continue, please grant Location permission.</string>
    <string name="reason_location_permission">This app needs Location Access to provide accurate weather updates based on your current location. We do not collect or share any personal data.</string>
    <string name="grant_accessibility_permission">To continue, please grant Accessibility permission.</string>
    <string name="reason_accessibility_permission">MultiLauncher needs Accessibility permission to provide enhanced features, such as locking the screen and opening quick settings. These functions help improve usability. We do not collect or share any data.</string>
    <string name="permission_granted">Permission Granted! You can continue.</string>
    <string name="this_can_be_disabled_later">* This permission may be disabled later.</string>
    <string name="settings_name">MultiLauncher Settings</string>
    <string name="settings_features_title">Features</string>
    <string name="settings_features_description">Improve your productivity.</string>
    <string name="settings_look_feel_title">Look &amp; Feel</string>
    <string name="settings_look_feel_description">Give your home screen a personal touch.</string>
    <string name="settings_gestures_title">Gestures</string>
    <string name="settings_gestures_description">Customize gestures for quick and easy navigation.</string>
    <string name="settings_notes_title">Notes</string>
    <string name="settings_notes_description">Personalize your notes to match your style.</string>
    <string name="settings_favorite_apps_title">Favorite Apps</string>
    <string name="settings_favorite_apps_description">Reorder your favorite apps for quick access from the home screen.</string>
    <string name="settings_hidden_apps_title">Hidden Apps</string>
    <string name="settings_hidden_apps_description">Manage hidden apps — unhide any app from this list when needed.</string>
    <string name="settings_advanced_title">Advanced</string>
    <string name="settings_advanced_description">Access app info, default launcher, backup tools and more.</string>
    <string name="settings_expert_title">Expert</string>
    <string name="settings_expert_description">Unlock hidden options, and advanced tweaks.</string>
    <string name="settings_exit_mlauncher_title">Exit MultiLauncher</string>
    <string name="settings_exit_mlauncher_description">Switch to your default launcher temporarily.</string>
    <string name="settings_exit_mlauncher_dialog">Choose a launcher</string>
    <string name="settings_donation_title">Donations</string>
    <string name="settings_donation_description">Support our work by making a donation.</string>
    <string name="settings_donation_dialog">Support Us</string>
    <string name="features_settings_title">Features</string>
    <string name="personalization">Personalization</string>
    <string name="theme_mode">Theme mode</string>
    <string name="app_language">Interface Language</string>
    <string name="font_family">Font Family</string>
    <string name="search_and_app_list">Search &amp; App List</string>
    <string name="hide_search_view">Hide Search View</string>
    <string name="show_floating_button">Show Shortcut Buttons</string>
    <string name="lock_orientation">Lock Orientation</string>
    <string name="haptic_feedback">Haptic Feedback</string>
    <string name="search">Search</string>
    <string name="search_engine">Search Engine</string>
    <string name="show_az_sidebar">Show A-Z Sidebar</string>
    <string name="auto_show_keyboard">Auto Show Keyboard</string>
    <string name="search_from_start">Search from Start</string>
    <string name="home_management">Home &amp; App Management</string>
    <string name="auto_open_apps">Auto Open Apps</string>
    <string name="open_apps_on_enter">Open App on Enter</string>
    <string name="lock_home_apps">Lock Home Apps</string>
    <string name="lock_settings">Lock Settings</string>
    <string name="apps_on_home_screen">Number of Home Apps</string>
    <string name="pages_on_home_screen">Number of Pages</string>
    <string name="enable_home_pager">Enable Home Pager</string>
    <string name="enable_app_timer">Enable App Timer</string>
    <string name="info_tiles">Info Tiles</string>
    <string name="show_clock">Show Clock</string>
    <string name="show_clock_format">Show Format (AM/PM)</string>
    <string name="show_date">Show Date</string>
    <string name="show_alarm">Show Alarm</string>
    <string name="show_daily_word">Show Daily Word</string>
    <string name="show_battery">Show Battery</string>
    <string name="show_battery_icon">Show Battery Icon</string>
    <string name="weather">Weather</string>
    <string name="show_weather">Show Weather</string>
    <string name="gps_location">GPS Location</string>
    <string name="temp_unit">Temperature Unit</string>
    <string name="manual_location">Set Manual Location</string>
    <string name="icon_packs">Icon Packs</string>
    <string name="look_feel_settings_title">Look &amp; Feel</string>
    <string name="text_size_adjustments">Text &amp; Size Adjustments</string>
    <string name="app_text_size">App Text Size</string>
    <string name="date_text_size">Date Text Size</string>
    <string name="clock_text_size">Clock Text Size</string>
    <string name="alarm_text_size">Alarm Text Size</string>
    <string name="daily_word_text_size">Daily Word Text Size</string>
    <string name="battery_text_size">Battery Text Size</string>
    <string name="layout_positioning">Layout &amp; Positioning</string>
    <string name="app_padding_size">Padding Size</string>
    <string name="extend_home_apps_area">Extend Clickable Area</string>
    <string name="alignment_to_bottom">Align to Bottom</string>
    <string name="visibility_display">Visibility &amp; Display</string>
    <string name="show_status_bar">Show Status bar</string>
    <string name="show_navigation_bar">Show Navigation bar</string>
    <string name="show_recent_apps">Show Recent Apps</string>
    <string name="number_of_recents">Number of Recent Apps</string>
    <string name="show_app_usage_stats">Show App Usage Stats</string>
    <string name="select_home_icons">Select Home Icon Pack</string>
    <string name="select_app_list_icons">Select App List Icon Pack</string>
    <string name="enable_filter_strength">Enable Fuzzy Finder</string>
    <string name="filter_strength">Fuzzy Finder Strength</string>
    <string name="show_background">Show Background</string>
    <string name="background_opacity">Background Transparency</string>
    <string name="total_screen_time">Total Screen Time</string>
    <string name="element_alignment">Element Alignment</string>
    <string name="date_alignment">Date</string>
    <string name="clock_alignment">Clock</string>
    <string name="alarm_alignment">Alarm</string>
    <string name="daily_word_alignment">Daily Word</string>
    <string name="home_alignment">Home Apps</string>
    <string name="drawer_alignment">Drawer Apps</string>
    <string name="element_colors">Element Colors</string>
    <string name="background_color">Background</string>
    <string name="app_color">Apps</string>
    <string name="clock_color">Clock</string>
    <string name="date_color">Date</string>
    <string name="alarm_color">Alarm</string>
    <string name="daily_word_color">Daily Word</string>
    <string name="battery_color">Battery</string>
    <string name="rainbow_shortcuts">Rainbow Shortcuts</string>
    <string name="shortcuts_color">Shortcuts</string>
    <string name="gestures_settings_title">Gestures</string>
    <string name="tap_click_actions">Tap/Click Actions</string>
    <string name="double_tap">Double Tap</string>
    <string name="clock_click_app">Click on Clock</string>
    <string name="date_click_app">Click on Date</string>
    <string name="usage_click_app">Click on Total Usage</string>
    <string name="floating_click_app">Click on Logo</string>
    <string name="swipe_movement">Swipe Movement</string>
    <string name="short_swipe_up_app">Short Swipe up</string>
    <string name="short_swipe_down_app">Short Swipe down</string>
    <string name="short_swipe_left_app">Short Swipe left</string>
    <string name="short_swipe_right_app">Short Swipe right</string>
    <string name="long_swipe_up_app">Long Swipe up</string>
    <string name="long_swipe_down_app">Long Swipe down</string>
    <string name="long_swipe_left_app">Long Swipe left</string>
    <string name="long_swipe_right_app">Long Swipe right</string>
    <string name="open_app">Open App</string>
    <string name="lock_screen">Lock Screen</string>
    <string name="private_space">Private Spaces (%1$s)</string>
    <string name="show_notifications">Show Notification</string>
    <string name="show_app_list">Show App List</string>
    <string name="show_widget_page">Show Widget Page</string>
    <string name="show_notes_manager">Show Notes Manager</string>
    <string name="show_digital_wellbeing">Show Digital Wellbeing</string>
    <string name="open_quick_settings">Quick Settings</string>
    <string name="show_recents">Show Recents</string>
    <string name="open_power_dialog">Power Dialog</string>
    <string name="take_a_screenshot">Take a Screenshot</string>
    <string name="previous_page">Go to Previous Page</string>
    <string name="next_page">Go to Next Page</string>
    <string name="notes_settings_title">Notes</string>
    <string name="display_options">Display Options</string>
    <string name="auto_expand_notes">Auto Expand Notes</string>
    <string name="click_to_edit_delete">Click To Edit/Delete</string>
    <string name="notes_colors">Notes Colors</string>
    <string name="notes_background_color">Notes Background</string>
    <string name="bubble_background_color">Bubble Background</string>
    <string name="bubble_message_color">Bubble Message</string>
    <string name="bubble_date_time_color">Bubble Date/Time</string>
    <string name="bubble_category_color">Bubble Category</string>
    <string name="input_colors">Input Colors</string>
    <string name="message_input_color">Message Input</string>
    <string name="message_input_hint_color">Message Input Hint</string>
    <string name="advanced_settings_title">Advanced</string>
    <string name="advanced_settings_set_as_default_launcher">Set as Default Launcher</string>
    <string name="delete">Delete</string>
    <string name="hide">Hide</string>
    <string name="lock">Lock</string>
    <string name="pin">Pin</string>
    <string name="rename">Rename</string>
    <string name="tag">Tag</string>
    <string name="info">Info</string>
    <string name="reset">Reset</string>
    <string name="close">Close</string>
    <string name="next">Next</string>
    <string name="start">Start</string>
</resources>